--- a/app/src/main/res/layout/activity_config_font.xml
+++ b/app/src/main/res/layout/activity_config_font.xml
@@ -1,78 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
-   android:orientation="vertical"
+   android:fillViewport="true"
    android:padding="7dp"
    tools:context="com.gameofcoding.fontgenerator.activities.ConfigFontActivity">
-   <TextView
-	  android:layout_width="wrap_content"
-	  android:layout_height="wrap_content"
-	  android:textAppearance="?android:attr/textAppearanceMedium"
-	  android:text="@string/label_font_name"/>
-   <EditText
-	  android:id="@+id/ed_font_name"
-	  android:layout_width="match_parent"
-	  android:layout_height="wrap_content"
-	  android:inputType="textPersonName"/>
    <LinearLayout
 	  android:layout_width="match_parent"
-	  android:layout_height="wrap_content"
-	  android:orientation="horizontal">
+	  android:layout_height="match_parent"
+	  android:orientation="vertical">
+	  <TextView
+		 android:layout_width="wrap_content"
+		 android:layout_height="wrap_content"
+		 android:textAppearance="?android:attr/textAppearanceMedium"
+		 android:text="@string/label_font_name"/>
+	  <EditText
+		 android:id="@+id/ed_font_name"
+		 android:layout_width="match_parent"
+		 android:layout_height="wrap_content"
+		 android:inputType="textPersonName"/>
 	  <LinearLayout
-		 android:layout_width="0dp"
-		 android:layout_height="match_parent"
-		 android:layout_weight="1"
-		 android:layout_marginRight="7dp"
-		 android:orientation="vertical">
-		 <TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceMedium"
-			android:text="@string/label_font_size"/>
+		 android:layout_width="match_parent"
+		 android:layout_height="wrap_content"
+		 android:orientation="horizontal">
 		 <LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
-			<EditText
-			   android:id="@+id/ed_font_size"
-			   android:layout_width="0dp"
-			   android:layout_weight="1"
-			   android:layout_height="wrap_content"
-			   android:inputType="number"/>
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:layout_marginRight="7dp"
+			android:orientation="vertical">
 			<TextView
 			   android:layout_width="wrap_content"
 			   android:layout_height="wrap_content"
-			   android:text="px"/>
+			   android:textAppearance="?android:attr/textAppearanceMedium"
+			   android:text="@string/label_font_size"/>
+			<LinearLayout
+			   android:layout_width="match_parent"
+			   android:layout_height="wrap_content">
+			   <EditText
+				  android:id="@+id/ed_font_size"
+				  android:layout_width="0dp"
+				  android:layout_weight="1"
+				  android:layout_height="wrap_content"
+				  android:inputType="number"/>
+			   <TextView
+				  android:layout_width="wrap_content"
+				  android:layout_height="wrap_content"
+				  android:text="px"/>
+			</LinearLayout>
 		 </LinearLayout>
-	  </LinearLayout>
-	  <LinearLayout
-		 android:layout_width="0dp"
-		 android:layout_height="match_parent"
-		 android:layout_weight="1"
-		 android:orientation="vertical">
-		 <TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceMedium"
-			android:text="@string/label_page_size"/>
 		 <LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
-			<EditText
-			   android:id="@+id/ed_page_size"
-			   android:layout_width="0dp"
-			   android:layout_height="wrap_content"
-			   android:layout_weight="1"
-			   android:inputType="number"/>
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_weight="1"
+			android:orientation="vertical">
 			<TextView
 			   android:layout_width="wrap_content"
 			   android:layout_height="wrap_content"
-			   android:text="px"/>
+			   android:textAppearance="?android:attr/textAppearanceMedium"
+			   android:text="@string/label_page_size"/>
+			<LinearLayout
+			   android:layout_width="match_parent"
+			   android:layout_height="wrap_content">
+			   <EditText
+				  android:id="@+id/ed_page_size"
+				  android:layout_width="0dp"
+				  android:layout_height="wrap_content"
+				  android:layout_weight="1"
+				  android:inputType="number"/>
+			   <TextView
+				  android:layout_width="wrap_content"
+				  android:layout_height="wrap_content"
+				  android:text="px"/>
+			</LinearLayout>
 		 </LinearLayout>
 	  </LinearLayout>
-   </LinearLayout>
+	  <LinearLayout
+		 android:layout_width="match_parent"
+		 android:layout_height="wrap_content">
+		 <Button
+			android:id="@+id/btn_select_color"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:text="@string/select_color"/>
+		 <TextView
+			android:id="@+id/tv_selected_color"
+			android:layout_width="0dp"
+			android:layout_height="match_parent"
+			android:layout_margin="5dp"
+			android:layout_weight="1"
+			android:clickable="true"
+			android:gravity="center"
+			android:textStyle="bold|italic"/>
+	  </LinearLayout>
 	  <Button
 		 android:id="@+id/btn_select_dest_dir"
 		 android:layout_width="match_parent"
@@ -83,12 +106,14 @@
 		 android:layout_width="match_parent"
 		 android:layout_height="wrap_content"
 		 android:gravity="center_horizontal"
+		 android:singleLine="true"
 		 android:textAppearance="?android:attr/textAppearanceMedium"
 		 android:text="@string/label_no_file_selected"/>
-   <Button
-	  android:id="@+id/btn_generate_font"
-	  style="?android:attr/buttonStyleSmall"
-	  android:layout_width="match_parent"
-	  android:layout_height="wrap_content"
-	  android:text="@string/label_generate"/>
-</LinearLayout>
+	  <Button
+		 android:id="@+id/btn_generate_font"
+		 style="?android:attr/buttonStyleSmall"
+		 android:layout_width="match_parent"
+		 android:layout_height="wrap_content"
+		 android:text="@string/label_generate"/>
+   </LinearLayout>
+</ScrollView>
